Fix word break in comments to word wrap

--- a/DiplomacyBook/app/assets/stylesheets/static_pages.scss
+++ b/DiplomacyBook/app/assets/stylesheets/static_pages.scss
@@ -1573,7 +1573,7 @@ a, button, input[type='submit'] {
 .comment {
     font-size: 13px;
     margin-left: 5px;
-    word-break: break-all;
+    word-wrap: break-word;
     white-space: pre-wrap;
 }
 
